# twitter-automation

./: .gitignore  README.md  config.py  main.py  module_settings.py  pyproject.toml  requirements.txt
data/: proxies.example.txt  retweets.example.txt  tweets.example.json  user_agents.example.txt
modules/: executor.py  twitter_account.py  twitter_client.py  twitter_follow.py  twitter_like.py  twitter_module.py  twitter_retweet.py  twitter_subscribe.py  twitter_tweet.py  twitter_unfollow.py
utils/: errors.py  file_system.py  input.py  sleep.py
